--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="../PreEntrega_VillalbaMarina/css/style.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +35,7 @@
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
-	<div class="index-info">
+	<div class="titulos">
 		<h1 class="titulo_h1">CHEZ OTILIA</h1>
 		<h2 class="titulo_h2">Pastelería Artesanal</h2>
 	</div>
@@ -59,6 +58,5 @@
 		</footer>
 	</div>
 	<!-- cierre footer -->	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe
 </body>
 </html>
