--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -35,7 +35,7 @@
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
-	<div class="index-info">
+	<div class="titulos">
 		<h1 class="titulo_h1">CHEZ OTILIA</h1>
 		<h2 class="titulo_h2">Pastelería Artesanal</h2>
 	</div>
