--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="../PreEntrega_VillalbaMarina/css/style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
