--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="pasteleria artesanal, formulario, chez otilia, contacto, dulces">
+	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
+	<meta name="author" content="marvillalba9">
+	<meta name="copyright" content="Chez Otilia">
+	<meta property="og: title" content="Chez Otilia Pasteleria Artesanal">
+	<meta property="og: description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes">
+	<meta property="og: image" url="">
+	<meta property="og: url" content="">
 	<title>Contacto | Chez Otilia Pasteleria Artesanal</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
