--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="pasteleria artesanal, tortas, recetas, dulces, rellenos">
+	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
+	<meta name="author" content="marvillalba9">
+	<meta name="copyright" content="Chez Otilia">
 	<title>Tortas | Chez Otilia Pasteleria Artesanal</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
