--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="pasteleria artesanal, tortas, chez otilia, postres, sabor dulce">
+	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
+	<meta name="author" content="marvillalba9">
+	<meta name="copyright" content="Chez Otilia">
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="../PreEntrega_VillalbaMarina/css/style.css">
