--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
 	<meta name="author" content="marvillalba9">
 	<meta name="copyright" content="Chez Otilia">
+	<meta property="og: title" content="Chez Otilia Pasteleria Artesanal">
+	<meta property="og: description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes">
+	<meta property="og: image" url="">
+	<meta property="og: url" content="">
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="../PreEntrega_VillalbaMarina/css/style.css">
