--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes, trabajamos con pedidos personalizados.">
 	<meta name="author" content="marvillalba9">
 	<meta name="copyright" content="Chez Otilia">
+	<meta property="og: title" content="Chez Otilia Pasteleria Artesanal">
+	<meta property="og: description" content="Pasteleria Artesanal casera especializada en tortas y cupcakes">
+	<meta property="og: image" url="">
+	<meta property="og: url" content="">
 	<title>Tortas | Chez Otilia Pasteleria Artesanal</title>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
