--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	<div class="infoindex">
 		<p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio dolore esse veritatis consequuntur aut.
 		Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
-		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg">
-		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg">
-		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg">
+		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
+		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
+		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
 	</div>
 	<!-- cierre de info general y presentacion -->
 	<br>
