--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -54,35 +54,35 @@
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem atque vero nam ducimus perspiciatis earum dolorum cum, illo sunt in magnam natus sint, optio nemo. Aut corrupti dolore possimus. Lorem ipsum dolor sit amet consectetur adipisicing, elit. Et repellat hic blanditiis aliquid tempora, doloremque dignissimos vero ducimus recusandae, nostrum corrupti quo incidunt necessitatibus nulla iste neque autem ab, optio.</p>
 	<div class="tortas">
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/cheesecakefrutos.jpg">
+			<img class="img-tortas" src="../imagenes/cheesecakefrutos.jpg" alt="cheesecake de frutos rojos">
 			<span class="descrip-tortas">CHEESECAKE DE FRUTOS ROJOS Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/cheesecakechoco.jpg">
+			<img class="img-tortas" src="../imagenes/cheesecakechoco.jpg" alt="cheesecake de chocolate">
 			<span class="descrip-tortas">CHEESECAKE DE CHOCOLATE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>	
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/brownie.jpg">
+			<img class="img-tortas" src="../imagenes/brownie.jpg" alt="torta brownie con dulce de leche y merengue">
 			<span class="descrip-tortas">TORTA BROWNIE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/moussefrutilla.jpg">
+			<img class="img-tortas" src="../imagenes/moussefrutilla.jpg" alt="torta mousse de frutilla">
 			<span class="descrip-tortas">MOUSSE DE FRUTILLA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/manzana.jpg">
+			<img class="img-tortas" src="../imagenes/manzana.jpg" alt="torta crumble de manzana">
 			<span class="descrip-tortas">CRUMBLE DE MANZANA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/chocotorta.jpg">
+			<img class="img-tortas" src="../imagenes/chocotorta.jpg" alt="chocotorta">
 			<span class="descrip-tortas">CHOCOTORTA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/lemonpie.jpg">
+			<img class="img-tortas" src="../imagenes/lemonpie.jpg" alt="torta lemon pie">
 			<span class="descrip-tortas">LEMON PIE Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 		<div class="info-tortas">
-			<img class="img-tortas" src="../imagenes/rogel.jpg">
+			<img class="img-tortas" src="../imagenes/rogel.jpg" alt="torta milhojas de dulce de leche">
 			<span class="descrip-tortas">TORTA ROGEL Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam quam, laboriosam doloremque eligendi numquam omnis, rem incidunt doloribus quaerat.</span>
 		</div>
 	</div>
