--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -53,19 +53,19 @@
 	<h2 class="subtitulo">Cupcakes</h2>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
 	<div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg">
+			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg" alt="cupcake de chocolate con buttercream de chocolate">
 			<span>CUPCAKE DE CHOCOLATE Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
 	</div>
 	<div class="cupcakes">		
-			<img class="img-cupcakes" src="../imagenes/cupvainilla.jpg">
+			<img class="img-cupcakes" src="../imagenes/cupvainilla.jpg" alt="cupcake de vainilla con buttercream de vainilla">
 			<span>CUPCAKE DE VAINILLA Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
 	</div>
 	<div class="cupcakes">	
-			<img class="img-cupcakes" src="../imagenes/cuplimon.jpg">
+			<img class="img-cupcakes" src="../imagenes/cuplimon.jpg" alt="cupcake de limon">
 			<span>CUPCAKE DE LIMON Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
 	</div>
 	<div class="cupcakes">
-			<img class="img-cupcakes" src="../imagenes/redvelvet.jpg">
+			<img class="img-cupcakes" src="../imagenes/redvelvet.jpg" alt="cupcake red velvet con buttercream de queso crema">
 			<span>CUPCAKE RED VELVET Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
 	</div>
 	<!-- cierre descriptivo de cupcakes -->
