--- a/index.html
+++ b/index.html
@@ -43,28 +43,30 @@
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
-	<div class="titulos">
-		<h1 class="titulo_h1">CHEZ OTILIA</h1>
-		<h2 class="titulo_h2">Pastelería Artesanal</h2>
-	</div>
+	<main>
+		<div class="titulos">
+		    <h1 class="titulo_h1">CHEZ OTILIA</h1>
+		    <h2 class="titulo_h2">Pastelería Artesanal</h2>
+	    </div>
 	<!-- cierre titulos -->
 	<!-- info general y presentacion -->
-	<div class="infoindex">
-		<p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio dolore esse veritatis consequuntur aut.
-		Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
-		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
-		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
-		<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
-	</div>
+	    <div class="infoindex">
+		    <p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio dolore esse veritatis consequuntur aut.
+		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
+		    <img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
+		    <img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
+		    <img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
+	    </div>
+	</main>
 	<!-- cierre de info general y presentacion -->
 	<br>
 	<!-- footer -->
-	<div class="footer">
-		<footer>Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
+	<footer>
+		<div class="footer">Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
 			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
-		</footer>
-	</div>
+		</div>
+	</footer>
 	<!-- cierre footer -->	
 </body>
 </html>
