cambios main y footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,43 +43,45 @@
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
-	<div class="titulos">
-		<h1 class="titulo_h1">CHEZ OTILIA</h1>
-		<h2 class="titulo_h2">Pastelería Artesanal</h2>
-	</div>
+	<main>
+	    <div class="titulos">
+		    <h1 class="titulo_h1">CHEZ OTILIA</h1>
+		    <h2 class="titulo_h2">Pastelería Artesanal</h2>
+	    </div>
 	<!-- cierre titulos -->
 
 	<!-- formulario de contacto -->
-	<h2 class="subtitulo">Contacto</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>	
-	<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d13102.769919407783!2d-58.16024352596436!3d-34.81367788307954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x95a327c47ad171c5%3A0x80fb17558854c3bd!2sC.%2074%2C%20Guillermo%20Hudson%2C%20Provincia%20de%20Buenos%20Aires!3m2!1d-34.8104382!2d-58.174587599999995!5e0!3m2!1ses!2sar!4v1667413151651!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-	<br>
-	<br>
-	<form class="contact_form">
-		<label for="name" class="detalle-form">Nombre</label>
-		<input class="formulario" type="text">
-		<label for="email" class="detalle-form">Email</label>
-		<input class="formulario" type="email">
-		<label for="phone" class="detalle-form">Telefono</label>
-		<input class="formulario" type="tel">
-		<label for="text" class="detalle-form">Motivo de la consulta</label>
-		<input class="formulario" type="text">
-		<label for="text" class="detalle-form">Observaciones</label>
-		<textarea for="text" class="formulario2" type="text"></textarea>
-		<div class="buttons">
-			<input class="formulario3" type="submit">
-			<input class="formulario3" type="reset" value="Limpiar formulario">
-		</div>
-	</form>
+	    <h2 class="subtitulo">Contacto</h2>
+	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>	
+	    <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d13102.769919407783!2d-58.16024352596436!3d-34.81367788307954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x95a327c47ad171c5%3A0x80fb17558854c3bd!2sC.%2074%2C%20Guillermo%20Hudson%2C%20Provincia%20de%20Buenos%20Aires!3m2!1d-34.8104382!2d-58.174587599999995!5e0!3m2!1ses!2sar!4v1667413151651!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	    <br>
+	    <br>
+	    <form class="contact_form">
+		    <label for="name" class="detalle-form">Nombre</label>
+		    <input class="formulario" type="text">
+		    <label for="email" class="detalle-form">Email</label>
+			<input class="formulario" type="email">
+			<label for="phone" class="detalle-form">Telefono</label>
+			<input class="formulario" type="tel">
+			<label for="text" class="detalle-form">Motivo de la consulta</label>
+			<input class="formulario" type="text">
+			<label for="text" class="detalle-form">Observaciones</label>
+			<textarea for="text" class="formulario2" type="text"></textarea>
+			<div class="buttons">
+				<input class="formulario3" type="submit">
+				<input class="formulario3" type="reset" value="Limpiar formulario">
+			</div>
+		</form>
+	</main>
 	<!-- cierre de formulario de contacto -->
 	<br>
 	<!-- footer -->
-	<div class="footer">
-		<footer>Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
+	<footer>
+		<div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
 			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
-		</footer>
-	</div>
+		</div>
+	</footer>
 	<!-- cierre footer -->	
 </body>
 </html>
