--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -43,40 +43,42 @@
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
-	<div class="titulos">
-		<h1 class="titulo_h1">CHEZ OTILIA</h1>
-		<h2 class="titulo_h2">Pastelería Artesanal</h2>
-	</div>
+	<main>
+		<div class="titulos">
+		    <h1 class="titulo_h1">CHEZ OTILIA</h1>
+		    <h2 class="titulo_h2">Pastelería Artesanal</h2>
+	    </div>
 	<!-- cierre titulos -->
 
 	<!-- descriptivo de cupcakes -->
-	<h2 class="subtitulo">Cupcakes</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
-	<div class="cupcakes">
+	    <h2 class="subtitulo">Cupcakes</h2>
+	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
+	    <div class="cupcakes">
 			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg" alt="cupcake de chocolate con buttercream de chocolate">
 			<span>CUPCAKE DE CHOCOLATE Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	</div>
-	<div class="cupcakes">		
+	    </div>
+	    <div class="cupcakes">		
 			<img class="img-cupcakes" src="../imagenes/cupvainilla.jpg" alt="cupcake de vainilla con buttercream de vainilla">
 			<span>CUPCAKE DE VAINILLA Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	</div>
-	<div class="cupcakes">	
+	    </div>
+	    <div class="cupcakes">	
 			<img class="img-cupcakes" src="../imagenes/cuplimon.jpg" alt="cupcake de limon">
 			<span>CUPCAKE DE LIMON Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	</div>
-	<div class="cupcakes">
+	    </div>
+	    <div class="cupcakes">
 			<img class="img-cupcakes" src="../imagenes/redvelvet.jpg" alt="cupcake red velvet con buttercream de queso crema">
 			<span>CUPCAKE RED VELVET Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Consequuntur, voluptate repellendus tempora architecto velit.</span>
-	</div>
+	    </div>
+	</main>
 	<!-- cierre descriptivo de cupcakes -->
 	<br>
 	<!-- footer -->
-	<div class="footer">
-		<footer>Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
+	<footer>
+	    <div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
 			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
-		</footer>
-	</div>
+		</div>
+	</footer>
 	<!-- cierre footer -->	
 </body>
 </html>
