--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -43,41 +43,43 @@
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
-	<div class="titulos">
-		<h1 class="titulo_h1">CHEZ OTILIA</h1>
-		<h2 class="titulo_h2">Pastelería Artesanal</h2>
-	</div>
+	<main>
+	    <div class="titulos">
+		    <h1 class="titulo_h1">CHEZ OTILIA</h1>
+		    <h2 class="titulo_h2">Pastelería Artesanal</h2>
+	    </div>
 	<!-- cierre titulos -->
 
 	<!-- info recetas -->
-	<h2 class="subtitulo">Recetas</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
-	<div class="recetas">
-		<div>
-			<iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/mPGhzgY-gLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-		<div>
-			<iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/gxXOHCejQ9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-		<div>
-			<iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/GpO5HCcAw3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-		<div>
-			<iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/BH6ZJatNhVs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-		<div>
-			<iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/Jm0sgO6xupQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-	</div>
+	    <h2 class="subtitulo">Recetas</h2>
+	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
+	    <div class="recetas">
+		    <div>
+			    <iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/mPGhzgY-gLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
+		    <div>
+			    <iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/gxXOHCejQ9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
+		    <div>
+			    <iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/GpO5HCcAw3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
+		    <div>
+			    <iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/BH6ZJatNhVs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
+		    <div>
+			    <iframe class="links_recetas" width="560" height="315" src="https://www.youtube.com/embed/Jm0sgO6xupQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
+	    </div>
+	</main>
 	<!-- cierre info recetas -->
 	<br>
 	<!-- footer -->
-	<div class="footer">
-		<footer>Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
+	<footer>
+	    <div class="footer"> Chez Otilia Pastelería Artesanal. Todos los derechos reservados.
 			<a href="https://facebook.com/chezotilia" class="facebook"><i class="fa-brands fa-square-facebook"></i></a>
 			<a href="https://instagram.com/chezotilia" class="instagram"><i class="fa-brands fa-square-instagram"></i></a>
-		</footer>
-	</div>
+		</div>
+	</footer>
 	<!-- cierre footer -->	
 </body>
 </html>
