--- a/index.html
+++ b/index.html
@@ -27,18 +27,23 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
+			<i class="fa-solid fa-house"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
+			<i class="fa-solid fa-cake-slice"></i>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
+			<i class="fa-solid fa-cupcake"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
+			<i class="fa-solid fa-notebook"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
+			<i class="fa-solid fa-envelope"></i>
 	</header>
 	<!-- cierre fila de logo+barra nav -->
 	<br>
