--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<title>Chez Otilia Pasteleria Artesanal</title>
 	<link rel="icon" href="../PreEntrega_VillalbaMarina/imagenes/chez.jpg">
 	<link rel="stylesheet" type="text/css" href="../PreEntrega_VillalbaMarina/css/style.css">
-	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
@@ -27,23 +26,36 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
-			<i class="fa-solid fa-house"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
-			<i class="fa-solid fa-cake-slice"></i>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
-			<i class="fa-solid fa-cupcake"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
-			<i class="fa-solid fa-notebook"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
-			<i class="fa-solid fa-envelope"></i>
+		<div class="header-responsive">
+			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+		</div>
+		<div class="header-responsive">
+			<i class="fa-solid fa-house" href="../PreEntrega_VillalbaMarina/index.html"></i>
+		</div>
+		<div class="header-responsive">
+			<i class="fa-solid fa-cake-slice" href="../PreEntrega_VillalbaMarina/pages/tortas.html"></i>
+		</div>	
+		<div class="header-responsive">
+			<i class="fa-solid fa-cupcake" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html"></i>
+		</div>
+		<div class="header-responsive">
+			<i class="fa-solid fa-notebook" href="../PreEntrega_VillalbaMarina/pages/recetas.html"></i>
+		</div>
+		<div class="header-responsive">
+			<i class="fa-solid fa-envelope" href="../PreEntrega_VillalbaMarina/pages/contacto.html"></i>
+		</div>
 	</header>
 	<!-- cierre fila de logo+barra nav -->
 	<br>
@@ -73,5 +85,6 @@
 		</div>
 	</footer>
 	<!-- cierre footer -->	
+	<script src="https://kit.fontawesome.com/f62dd1da11.js" crossorigin="anonymous"></script>
 </body>
 </html>
