--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 	<!-- fila de logo+barra nav -->
 	<header class="header-container">
-		<div class="header-nav">
-			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+		<div class="logoppal">
+			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
@@ -38,8 +38,8 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
-		<div class="header-responsive">
-			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+		<div class="logoppal">
+			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
 		<div class="header-responsive">
 			<i class="fa-solid fa-house" href="../PreEntrega_VillalbaMarina/index.html"></i>
