--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
+			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO<i class="fa-solid fa-house"></i></a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
