--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO<i class="fa-solid fa-house"></i></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
+			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS<i class="fa-solid fa-cake-slice"></i></a>
 		</div>	
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
+			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES<i class="fa-solid fa-cupcake"></i></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
+			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS<i class="fa-solid fa-notebook"></i></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
+			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO<i class="fa-solid fa-envelope"></i></a>
 		</div>
 	</header>
 	<!-- barra nav responsive -->
