--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO<i class="fa-solid fa-envelope"></i></a>
 		</div>
 	</header>
-	<!-- barra nav responsive -->
+	<!-- barra nav responsive
 	<header class="header-responsive">
 		<div class="logo-responsive">
 			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
@@ -61,7 +61,7 @@
 			<i class="fa-solid fa-envelope" href="../PreEntrega_VillalbaMarina/pages/contacto.html"></i>
 		</div>
 	</header>
-	<!-- cierre barra nav responsive -->
+	cierre barra nav responsive -->
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
