--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS<i class="fa-solid fa-cake-slice"></i></a>
 		</div>	
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES<i class="fa-solid fa-cupcake"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES<i class="fa-solid fa-cupcake"></i></i></a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS<i class="fa-solid fa-notebook"></i></a>
