--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO<i class="fa-solid fa-house"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a><i class="fa-solid fa-house"></i>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS<i class="fa-solid fa-cake-slice"></i></a>
