--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a><i class="fa-solid fa-house"></i>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS<i class="fa-solid fa-cake-slice"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a><i class="fa-solid fa-cake-slice"></i>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES<i class="fa-solid fa-cupcake"></i></i></a>
