--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
 			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a><i class="fa-solid fa-house"></i>
+			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
+			<a href="../PreEntrega_VillalbaMarina/index.html"><i class="fa-solid fa-house"></i></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a><i class="fa-solid fa-cake-slice"></i>
+			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
 		</div>	
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES<i class="fa-solid fa-cupcake"></i></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS<i class="fa-solid fa-notebook"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO<i class="fa-solid fa-envelope"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
 		</div>
 	</header>
 	<!-- barra nav responsive
@@ -46,8 +47,7 @@
 		<div class="logo-responsive">
 			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
-		<div class="nav-responsive">
-			<i class="fa-solid fa-house" href="../PreEntrega_VillalbaMarina/index.html"></i>
+		<a href="../PreEntrega_VillalbaMarina/index.html"><i class="fa-solid fa-house"></i></a>
 		</div>
 		<div class="nav-responsive">
 			<i class="fa-solid fa-cake-slice" href="../PreEntrega_VillalbaMarina/pages/tortas.html"></i>
