--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html"><i class="fa-solid fa-cake-slice"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html"><i class="fa-solid fa-cake-candles"></i></a>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
