--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html"><i class="fa-solid fa-cake-candles"></i></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html" src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
+			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html"><i class="fa-solid fa-book"></i></a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
