--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html" src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
+			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
