--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
-			<a href="../PreEntrega_VillalbaMarina/index.html"><i class="fa-solid fa-house"></i></a>
+			<img class="nav-mobile" src="../PreEntrega_VillalbaMarina/imagenes/home.png" href="../PreEntrega_VillalbaMarina/index.html">
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
@@ -44,27 +44,6 @@
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
 		</div>
 	</header>
-	<!-- barra nav responsive
-	<header class="header-responsive">
-		<div class="logo-responsive">
-			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
-		</div>
-		<a href="../PreEntrega_VillalbaMarina/index.html"><i class="fa-solid fa-house"></i></a>
-		</div>
-		<div class="nav-responsive">
-			<i class="fa-solid fa-cake-slice" href="../PreEntrega_VillalbaMarina/pages/tortas.html"></i>
-		</div>	
-		<div class="nav-responsive">
-			<i class="fa-solid fa-cupcake" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html"></i>
-		</div>
-		<div class="nav-responsive">
-			<i class="fa-solid fa-notebook" href="../PreEntrega_VillalbaMarina/pages/recetas.html"></i>
-		</div>
-		<div class="nav-responsive">
-			<i class="fa-solid fa-envelope" href="../PreEntrega_VillalbaMarina/pages/contacto.html"></i>
-		</div>
-	</header>
-	cierre barra nav responsive -->
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
