--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
-			<img class="nav-mobile" src="../PreEntrega_VillalbaMarina/imagenes/home.png" href="../PreEntrega_VillalbaMarina/index.html">
+			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/index.html"><img src="../PreEntrega_VillalbaMarina/imagenes/home.png"></a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
+			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/tortas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
 		</div>	
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
+			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cupcake.png"></a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
-			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html"><i class="fa-solid fa-book"></i></a>
+			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/recetas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/recipe.png"></a>
 		</div>
 		<div class="header-nav">
 			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
+			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/contacto.html"><img src="../PreEntrega_VillalbaMarina/imagenes/email.png"></a>
 		</div>
 	</header>
 	<!-- cierre fila de logo+barra nav -->
