--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
+			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
 			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/index.html"><img src="../PreEntrega_VillalbaMarina/imagenes/home.png"></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
+			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
 			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/tortas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
 		</div>	
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
+			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
 			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cupcake.png"></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
+			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
 			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/recetas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/recipe.png"></a>
 		</div>
 		<div class="header-nav">
-			<a href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
+			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
 			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/contacto.html"><img src="../PreEntrega_VillalbaMarina/imagenes/email.png"></a>
 		</div>
 	</header>
