--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -45,8 +45,8 @@
 	<!-- titulos -->
 	<main>
 		<div class="titulos">
-		    <h1 class="titulo_h1">CHEZ OTILIA</h1>
-		    <h2 class="titulo_h2">Pastelería Artesanal</h2>
+		    <h1 class="titulo-h1">CHEZ OTILIA</h1>
+		    <h2 class="titulo-h2">Pastelería Artesanal</h2>
 	    </div>
 	<!-- cierre titulos -->
 
