--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -52,7 +52,7 @@
 	<!-- cierre titulos -->
 
 	<!-- info recetas -->
-	    <h2 class="subtitulo">Recetas</h2>
+	    <h2 class="subtitulo1">Recetas</h2>
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
 	    <div class="recetas">
 		    <div>
