--- a/pages/cupcakes.html
+++ b/pages/cupcakes.html
@@ -52,7 +52,7 @@
 	<!-- cierre titulos -->
 
 	<!-- descriptivo de cupcakes -->
-	    <h2 class="subtitulo1">Cupcakes</h2>
+	    <h2 class="subtitulo1">CUPCAKES</h2>
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
 	    <div class="cupcakes">
 			<img class="img-cupcakes" src="../imagenes/cupchoco.jpg" alt="cupcake de chocolate con buttercream de chocolate">
