--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -52,7 +52,7 @@
 	<!-- cierre titulos -->
 
 	<!-- descriptivo de tortas -->
-	    <h2 class="subtitulo1">Tortas</h2>
+	    <h2 class="subtitulo1">TORTAS</h2>
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolorem atque vero nam ducimus perspiciatis earum dolorum cum, illo sunt in magnam natus sint, optio nemo. Aut corrupti dolore possimus. Lorem ipsum dolor sit amet consectetur adipisicing, elit. Et repellat hic blanditiis aliquid tempora, doloremque dignissimos vero ducimus recusandae, nostrum corrupti quo incidunt necessitatibus nulla iste neque autem ab, optio.</p>
 	    <div class="tortas">
 		    <div class="info-tortas">
