--- a/index.html
+++ b/index.html
@@ -21,7 +21,38 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-	<!-- fila de logo+barra nav -->
+	
+	<nav class="navbar navbar-expand-lg bg-light">
+		<div class="container-fluid">
+		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
+			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+		  </a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+			  <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
+			  </li>
+			</ul>
+		  </div>
+		</div>
+	  </nav>
+
+	<!-- fila de logo+barra nav
 	<header class="header-container">
 		<div class="header-nav">
 			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
@@ -47,7 +78,7 @@
 			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/contacto.html"><img src="../PreEntrega_VillalbaMarina/imagenes/email.png"></a>
 		</div>
 	</header>
-	<!-- cierre fila de logo+barra nav -->
+	cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
 	<main>
