--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
 	<!-- cierre titulos -->
 
 	<!-- formulario de contacto -->
-	    <h2 class="subtitulo1">Contacto</h2>
+	    <h2 class="subtitulo1">CONTACTO</h2>
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>	
 	    <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d13102.769919407783!2d-58.16024352596436!3d-34.81367788307954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x95a327c47ad171c5%3A0x80fb17558854c3bd!2sC.%2074%2C%20Guillermo%20Hudson%2C%20Provincia%20de%20Buenos%20Aires!3m2!1d-34.8104382!2d-58.174587599999995!5e0!3m2!1ses!2sar!4v1667413151651!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	    <br>
