--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	
-	<nav class="navbar navbar-expand-lg bg-light">
+	<nav class="navbar navbar-expand-md bg-light">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
 			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
