--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav class="navbar navbar-expand-md bg-light">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
-			<img src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
+			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
