--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-	<nav class="navbar navbar-expand-md bg-light">
+	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
 			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
