--- a/index.html
+++ b/index.html
@@ -64,10 +64,33 @@
 	    <div class="infoindex">
 		    <p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio dolore esse veritatis consequuntur aut.
 		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
-		    <img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
-		    <img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
-		    <img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
-	    </div>
+		</div>
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+			<div class="carousel-indicators">
+			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" class="d-block w-100" alt="porcion de torta de chocolate y porcion de torta red velvet">
+			  </div>
+			  <div class="carousel-item">
+				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos" class="d-block w-100">
+			  </div>
+			  <div class="carousel-item">
+				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" class="d-block w-100" alt="elementos y utensillos de cocina">
+			  </div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="visually-hidden">Next</span>
+			</button>
+		  </div>
 	</main>
 	<!-- cierre de info general y presentacion -->
 	<br>
