--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 		    <p class="infoindex-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, dignissimos rerum fugiat ab vel. Ullam placeat praesentium doloremque delectus, id laudantium tempore necessitatibus optio dolore esse veritatis consequuntur aut.
 		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
 		</div>
+		<div class="images-desktop">
+			<img class="imgindex" src="../PreEntrega2_VillalbaMarina/imagenes/pasteleria1.jpg">
+			<img class="imgindex" src="../PreEntrega2_VillalbaMarina/imagenes/pasteleria2.jpg">
+			<img class="imgindex" src="../PreEntrega2_VillalbaMarina/imagenes/pasteleria3.jpg">
+		</div>
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 			<div class="carousel-indicators">
 			  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
