--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -66,19 +66,19 @@
 	    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis facilis earum, vero, qui, libero quibusdam vel expedita nisi voluptatibus magni quod enim porro ipsum perspiciatis molestias nostrum dolor velit consectetur.</p>
 	    <div class="recetas">
 		    <div class="videos">
-			    <iframe class="links_recetas" src="https://www.youtube.com/embed/mPGhzgY-gLU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe class="links_recetas" src="https://www.youtube.com/embed/mPGhzgY-gLU" title="YouTube video player" width="560px" height="315px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		    </div>
 		    <div class="videos">
-			    <iframe class="links_recetas" src="https://www.youtube.com/embed/gxXOHCejQ9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe class="links_recetas" src="https://www.youtube.com/embed/gxXOHCejQ9E" title="YouTube video player" width="560px" height="315px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		    </div>
 		    <div class="videos">
-			    <iframe class="links_recetas" src="https://www.youtube.com/embed/GpO5HCcAw3g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe class="links_recetas" src="https://www.youtube.com/embed/GpO5HCcAw3g" title="YouTube video player" width="560px" height="315px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		    </div>
 		    <div class="videos">
-			    <iframe class="links_recetas" src="https://www.youtube.com/embed/BH6ZJatNhVs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		    </div>
+			    <iframe class="links_recetas" src="https://www.youtube.com/embed/BH6ZJatNhVs" title="YouTube video player" width="560px" height="315px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div> 
 		    <div class="videos">
-			    <iframe class="links_recetas" src="https://www.youtube.com/embed/Jm0sgO6xupQ" title="YouTube video player" width="100%" height="100%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe class="links_recetas" src="https://www.youtube.com/embed/Jm0sgO6xupQ" title="YouTube video player" width="560px" height="315px" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		    </div>
 	    </div>
 	</main>
